--- a/homework copy/style-index.css
+++ b/homework copy/style-index.css
@@ -16,7 +16,10 @@ body {
     max-width: 10%; 
     height: auto; 
     display: block;
-    margin-left: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
 }
 
 .menu a {
@@ -32,11 +35,11 @@ body {
 }
 
 .content {
-    padding: 20px; 
+    padding: 20px;
 }
 
 .content-image {
-    max-width: 80%; 
+    max-width:50%; 
     height: auto; 
     display: block;
     margin: auto;
